[package]
name = "prime_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "filter-tests"

[[bin]]
name = "division-converter"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.15", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }

